--- a/src/Components/List/list.scss
+++ b/src/Components/List/list.scss
@@ -1,6 +1,7 @@
 .list {
     width: 100%;
     margin-top: 10px;
+    margin-top: 2vh;
 
     .list-title {
         color: white;
@@ -10,6 +11,7 @@
     }
 
     .wrapper {
+        margin-top: 1.5vh;
         position: relative;
 
         .slider-arrow {
@@ -18,14 +20,14 @@
             background-color: rgba(24, 24, 24, 0.5);
             color: white;
             position: absolute;
-            z-index: 99;
+            z-index: 1;
             top: 0;
             bottom: 0;
             cursor: pointer;
         
             &.left {
                 left: 0vw;
-                padding-left: 2vw;
+                padding-left: 30px;
             }
             &.right {
                 right: 0vw;
@@ -39,6 +41,7 @@
             display: flex;
             width: max-content;
             transition: all ease 0.5s;
+            z-index: 0;
         }
     }
 }
