--- a/src/Pages/Login/login.scss
+++ b/src/Pages/Login/login.scss
@@ -1,11 +1,11 @@
-.register {
+.login {
     width: 100vw;
     height: 100vh;
     background: linear-gradient(
         to bottom, 
-        rgba(0, 0, 0, 0.2) 0%,
-        rgba(0, 0, 0, 1) 100%
-    ), url(https://springboard-cdn.appadvice.com/wp-content/appadvice-v2-media/2016/11/Netflix-background_860c8ece6b34fb4f43af02255ca8f225-xl.jpg);
+        rgba(0, 0, 0, 0.4) 0%,
+        rgba(0, 0, 0, 0.9) 100%
+    ), url(http://mppmduse2pmpovwapp.azurewebsites.net/wp-content/uploads/2019/09/netflix-background-9.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
@@ -50,62 +50,59 @@
         justify-content: center;
         color: white;
 
-        h1 {
-            font-size: 2.8em;
-            margin-bottom: 1vh;
-        }
-        h2 {
-            font-size: 1.8em;;
-        }
-        p {
-            margin-top: 2vh;
-            span {
-                color: var(--theme-color);
-                filter: brightness(110%);
-                font-weight: 600;
-                font-size: 1.8em;
-            }
-            .invite {
-                margin-top: 1.8vh;
-                font-weight: 300;
-                font-size: 1.5em;
-            }
-        }
-        .input {
-            width: 40%;
-            background-color: white;
+        form {
+            width: 300px;
+            height: 300px;
+            padding: 30px;
+            border-radius: 5px;
+            background-color: var(--main-color);
             display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-top: 20px;
-            height: 50px;
+            flex-direction: column;
+            justify-content: space-around;
+
+            h1 {
+                color: rgb(235, 235, 235)
+            }
 
             input {
-                flex: 9;
-                height: 100%;
-                padding: 0px 20px;
+                height: 40px;
+                border-radius: 5px;
                 border: 0px;
-                font-size: 1em;
-                color:rgb(82, 82, 82);
-                font-weight: 500;
-                transition: all ease 0.2s;
-                &:hover {
-                    background-color: rgba(218, 218, 218, 0.616);
+                background-color: rgb(97, 97, 97);
+                color: white;
+                padding-left: 15px;
+                font-size: 0.8em;
+
+                &::placeholder {
+                    color: lightgray;
                 }
             }
+
             button {
-                flex: 3;
+                height: 40px;
+                border-radius: 5px;
+                border: none;
                 background-color: var(--theme-color);
-                border: 0px;
-                height: 100%;
                 color: white;
-                font-weight: 600;
-                font-size: 0.9em;
+                font-size: 1em;
+                font-weight: 500;
                 cursor: pointer;
                 transition: all ease 0.5s;
+
                 &:hover {
                     filter: brightness(85%);
                 }
+            }
+
+            span {
+                color: lightgray;
+                b {
+                    color: white;
+                    cursor: pointer;
+                }
+            }
+            small {
+                color: gray;
             }
         }
     }
